syntax = "proto3";
option go_package = "vitess.io/vitess/go/boost/dataflow";

package dataflow;

import "gogoproto/gogo.proto";

message IndexPair {
  uint32 global = 1 [(gogoproto.casttype) = "NodeIdx"];
  uint32 local = 2 [(gogoproto.casttype) = "LocalNodeIdx"];
};

message DomainAddr {
  uint64 domain = 1 [(gogoproto.casttype) = "DomainIdx"];
  uint64 shard = 2 [(gogoproto.casttype) = "uint"];
};

message Sharding {
  enum Mode {
    None = 0;
    ForcedNone = 1;
    Random = 2;
    ByColumn = 3;
  }

  Mode mode = 1;
  int64 col = 2 [(gogoproto.casttype) = "int"];
  uint64 shards = 3 [(gogoproto.casttype) = "uint"];
};
